--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.24.0"
   },
